--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,8 @@
 @import '../node_modules/@syncfusion/ej2-base/styles/material.css';  
-@import '../node_modules/@syncfusion/ej2-buttons/styles/material.css';  
-@import '../node_modules/@syncfusion/ej2-calendars/styles/material.css';  
-@import '../node_modules/@syncfusion/ej2-dropdowns/styles/material.css';  
+@import '../node_modules/@syncfusion/ej2-buttons/styles/material.css';    
 @import '../node_modules/@syncfusion/ej2-inputs/styles/material.css';  
-@import '../node_modules/@syncfusion/ej2-navigations/styles/material.css';
 @import '../node_modules/@syncfusion/ej2-popups/styles/material.css';
 @import '../node_modules/@syncfusion/ej2-splitbuttons/styles/material.css';
-@import "../node_modules/@syncfusion/ej2-react-grids/styles/material.css";
 body{
   font-size: 12px !important;
 
@@ -15,7 +11,7 @@ label {
   display: block;
   margin-top: 10px;
 }
-.table {
+.table { 
   margin-top: 20px !important;
 }
 
@@ -26,9 +22,11 @@ label {
 
 .card {
   background-color: #f7f7f7;
-  padding: 20px 25px 30px;
-  margin: 0 auto 25px;
+  /* padding: 20px 25px 30px;
+  margin: 0 auto 25px;*/
+  padding: 15px;
   margin-top: 50px;
+  margin-bottom: 50px;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
